# sm2-key-generator

./: LICENSE  README.md  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: build_linux.yml  build_windows.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/translations/: zh-CN.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: key_generator_state.dart  pri_to_pub_state.dart  rust_init_state.dart
lib/page/: about_page.dart  home_page.dart  pri_to_pub_page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: sm2_key_generator.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  sm2_key_generator.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_sm2_key_generator.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_sm2_key_generator.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
